--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -35,6 +35,8 @@
 	width: 100%;
 	display: block;
 	-webkit-transform-style: preserve-3d;
+	height: 200px;
+    object-fit: cover;
 }
 .owl-carousel .owl-nav,
 .owl-carousel .owl-dots{
